# Qt_FrameWork

PyQt/: README.md
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/: 0000 CẢNH BÁO LỪA ĐẢO.txt
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/02 - PyQt6 Widgets Introduction/: 012 FlightDemo.ui  013 RadioDemo.ui  014 checkboxex.py  017 DoubleSpinDemo.ui  018 SpinBoxDemo.ui  021 comboexamole.py  022 ComboDemo.ui  025 SliderDemo.ui  027 ListDemo.ui  029 ListWidgetApp.ui  037 FontDemo.ui
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/06 - Simple Notepad Application in PyQt6/: 015 PartThree.rar
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/07 - Database Handling in PyQt6/: 001 PartFour.rar  002 DbConDemo.ui  003 InsertDemo.ui  004 SelectDemo.ui  005 SearchDemo.ui  006 LoginDemo.ui
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/09 - 2D Graphics And Drawing/: 001 PartFive.rar  002 drawingrect.py  007 conicalgradient.py
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/12 - Charts in PyQt6/: 001 PartSeven.rar  001 Section Introduction_en.srt  002 Creating LineChart or QLineSeries_en.srt  003 Creating PieChart or QPieSeries_en.srt  004 Creating BarChart or QBarSeries_en.srt  005 Creating QStackedBarSeries_en.srt  006 LineChart and BarChart_en.srt  007 Creating DonutChart_en.srt  008 LineChart with QtQuick_en.srt  008 linechart.qml  009 BarChart with QtQuick_en.srt  009 barchart.qml  010 StackedBarChart in QtQuick_en.srt  010 stackedbar.qml  011 PieSeries with QtQuick_en.srt  011 piechart.qml  012 ScatterChart with QtQuick_en.srt  012 scatter.qml
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/13 - Library Management System in PyQt6/: 019 PartEight.rar
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/14 - QtMultiMedia, QtWebEngine & Packaging PyQt Application/: 001 PartNine.rar  006 WebBrowser.rar
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/15 - PyQt6.2 Released with QtMultMedia & QtWebEngine Modules/: 001 mediaplay.py  002 PartTen.rar
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/17 - Working with PyQtGraph and PyQt6/: 002 linegraph.py  004 lined.py  005 scatterp.py  006 addlegendexa.py  007 updategraph.py
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/18 - PyQt6 with Amazon RDS MySQL Instance/: 008 InsertData.py  008 PartTwelve.rar
PyQt/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/NSTH-Python.GUI.Development.PyQt6.Qt.Designer/25 - QtPdf Module in PyQt6/: 001 PDFExample.py
PyQt/Tutorial_Templates/001-Widgets/: 001_LabelExample.py  002_PushButtonExample.py  003_LineEditExample.py
Qt-QML/: README.md
Qt-QML/Tutorial_Templates/001_QtQuickElements/AnchorseExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/ComponentExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/FlowExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/ImageExample/: CMakeLists.txt  Main.qml  Resource.qrc  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/KeyElementExample/: CMakeLists.txt  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/MouseAreaExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/QMLDesigner/: QMLDesigner.qmlproject  QMLDesigner.qmlproject.qtds
Qt-QML/Tutorial_Templates/001_QtQuickElements/RectangleExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/RowExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/TextExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/001_QtQuickElements/TextFieldExample/: Main.qml  main.cpp
Qt-QML/Tutorial_Templates/002_QtQuickControls/: README.md
Qt-QML/Tutorial_Templates/002_QtQuickControls/BusyIndicationExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/002_QtQuickControls/ButtonExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/002_QtQuickControls/CheckBoxExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/002_QtQuickControls/ComboBoxExample/: CMakeLists.txt  Main.qml  main.cpp
Qt-QML/Tutorial_Templates/002_QtQuickControls/ContextMenuExample/: CMakeLists.txt  Main.qml  main.cpp
Qt6-Cpp/: README.md
Qt6-Cpp/NSTH-Qt6.C++.GUI.Mobile.App.Development/NSTH-Qt6.C++.GUI.Mobile.App.Development/15. Qt Quick in Qt6/15/12-TextInputExample/: CMakeLists.txt  main.cpp  main.qml
Qt6-Cpp/NSTH-Qt6.C++.GUI.Mobile.App.Development/NSTH-Qt6.C++.GUI.Mobile.App.Development/15. Qt Quick in Qt6/15/13-KeyElements/: CMakeLists.txt  main.cpp  main.qml
Qt6-Cpp/Simple_Project/ClockApp/: CMakeLists.txt  widget.cpp  widget.h
Qt6-Cpp/Simple_Project/Notepad/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt6-Cpp/Simple_Project/PaintApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt6-Cpp/Tutorial_Templates/.qtcreator/: project.json
Qt6-Cpp/Tutorial_Templates/001_WidgetElements/: README.md
Qt6-Cpp/Tutorial_Templates/001_WidgetElements/021_ColorDialog/: CMakeLists.txt  widget.cpp  widget.h
Qt6-Cpp/Tutorial_Templates/003_SimpleApp/001_SimpleAppGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resrc.qrc
Qt6-Cpp/Tutorial_Templates/004_Painting&Graphics/: README.md
Qt6-Cpp/Tutorial_Templates/008_MDI_SDI_Windowns/: README.md
Qt6-Cpp/Tutorial_Templates/009_QtAnimation/: README.md
Qt6-Cpp/Tutorial_Templates/012_SerialCOMPort/: README.md
Qt6-Cpp/Tutorial_Templates/untitled/: CMakeLists.txt  Main.qml
(+335 files in other folders)
